// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`html-like-comments.js format[babel] 1`] = `
"Unexpected token (2:1)
  1 | alert(
> 2 | <!-- comment
    | ^
  3 | 'hello world'
  4 | )
  5 |
Cause: Unexpected token (2:0)"
`;

exports[`html-like-comments.js format[babel-ts] 1`] = `
"Unexpected token (2:1)
  1 | alert(
> 2 | <!-- comment
    | ^
  3 | 'hello world'
  4 | )
  5 |
Cause: Unexpected token (2:0)"
`;

exports[`html-like-comments.js format[flow] 1`] = `
"Unexpected token \`!\`, expected the token \`>\` (2:2)
  1 | alert(
> 2 | <!-- comment
    |  ^
  3 | 'hello world'
  4 | )
  5 |
Cause: Unexpected token \`!\`, expected the token \`>\` (2:1)"
`;

exports[`html-like-comments.js format[hermes] 1`] = `
"'identifier' expected as JSX element name (2:2)
  1 | alert(
> 2 | <!-- comment
    |  ^
  3 | 'hello world'
  4 | )
  5 |
Cause: 'identifier' expected as JSX element name (2:1)
<!-- comment
 ^"
`;

exports[`html-like-comments.js format[typescript] 1`] = `
"Expression expected. (2:1)
  1 | alert(
> 2 | <!-- comment
    | ^
  3 | 'hello world'
  4 | )
  5 |
Cause: Expression expected."
`;
